--- a/Views/Discounts/Create.cshtml
+++ b/Views/Discounts/Create.cshtml
@@ -2,50 +2,67 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutTheme.cshtml";
 }
 
-<h1>Create</h1>
+<!--begin::Entry-->
+<div class="d-flex flex-column-fluid">
+    <!--begin::Container-->
+    <div class="container">
+        <!--begin::Header-->
+        <div class="card-header border-0">
+            <h1>Create</h1>
 
-<h4>Discount</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label">Tên khuyến mãi :</label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+            <h4>Discount</h4>
+            <hr />
+            <div class="row">
+                <div class="col-md-4">
+                    <form asp-action="Create">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="form-group">
+                            <label asp-for="Name" class="control-label">Tên khuyến mãi :</label>
+                            <input asp-for="Name" class="form-control" />
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Percent" class="control-label">Phần trăm khuyến mãi :</label>
+                            <input asp-for="Percent" class="form-control" />
+                            <span asp-validation-for="Percent" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="CreatDate" class="control-label">Ngày tạo :</label>
+                            <input asp-for="CreatDate" class="form-control" />
+                            <span asp-validation-for="CreatDate" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="DateValid" class="control-label">Ngày hết hạn :</label>
+                            <input asp-for="DateValid" class="form-control" />
+                            <span asp-validation-for="DateValid" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="QuantityDiscount" class="control-label">Số lượng :</label>
+                            <input asp-for="QuantityDiscount" class="form-control" />
+                            <span asp-validation-for="QuantityDiscount" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Create" class="btn btn-primary" />
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Percent" class="control-label">Phần trăm khuyến mãi :</label>
-                <input asp-for="Percent" class="form-control" />
-                <span asp-validation-for="Percent" class="text-danger"></span>
+            <div>
+                <a asp-action="Index">Back to List</a>
             </div>
-            <div class="form-group">
-                <label asp-for="CreatDate" class="control-label">Ngày tạo :</label>
-                <input asp-for="CreatDate" class="form-control" />
-                <span asp-validation-for="CreatDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateValid" class="control-label">Ngày hết hạn :</label>
-                <input asp-for="DateValid" class="form-control" />
-                <span asp-validation-for="DateValid" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="QuantityDiscount" class="control-label">Số lượng :</label>
-                <input asp-for="QuantityDiscount" class="form-control" />
-                <span asp-validation-for="QuantityDiscount" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
+        <!--end::Header-->
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
+
+
+@section Scripts{
+    <script type="text/javascript">
+        $('#menu-item-discount').addClass('menu-item-active');
+    </script>
+}
