--- a/Views/Discounts/Index.cshtml
+++ b/Views/Discounts/Index.cshtml
@@ -2,59 +2,77 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutTheme.cshtml";
 }
 
-    <h3>Quản Lí Khuyến Mãi</h3>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Percent)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DateValid)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.QuantityDiscount)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Percent)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateValid)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.QuantityDiscount)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.DiscountId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.DiscountId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.DiscountId">Delete</a>
-            </td>
-        </tr>
+<!--begin::Entry-->
+<div class="d-flex flex-column-fluid">
+    <!--begin::Container-->
+    <div class="container">
+        <!--begin::Header-->
+        <div class="card-header border-0">
+            <h3>Quản Lí Khuyến Mãi</h3>
+
+            <p>
+                <a asp-action="Create">Create New</a>
+            </p>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Name)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Percent)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.CreatDate)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.DateValid)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.QuantityDiscount)
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Percent)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CreatDate)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.DateValid)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.QuantityDiscount)
+                            </td>
+                            <td>
+                                <a asp-action="Edit" asp-route-id="@item.DiscountId">Edit</a> |
+                                <a asp-action="Details" asp-route-id="@item.DiscountId">Details</a> |
+                                <a asp-action="Delete" asp-route-id="@item.DiscountId">Delete</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+
+@section Scripts{
+    <script type="text/javascript">
+        $('#menu-item-discount').addClass('menu-item-active');
+    </script>
 }
-    </tbody>
-</table>
