--- a/Views/Types/Edit.cshtml
+++ b/Views/Types/Edit.cshtml
@@ -2,30 +2,102 @@
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutTheme.cshtml";
 }
 
 
-    <h3>Chỉnh sửa :</h3>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="TypeID" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label">Tên thể loại</label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+@*<h3>Chỉnh sửa :</h3>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="TypeID" />
+                <div class="form-group">
+                    <label asp-for="Name" class="control-label">Tên thể loại</label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>*@
 
+<!--begin::Entry-->
+<div class="d-flex flex-column-fluid">
+    <!--begin::Container-->
+    <div class="container">
+        <!--begin::Card-->
+        <div class="card card-custom">
+            <!--begin::Card body-->
+            <div class="card-body px-0">
+                <form class="form" id="kt_form" method="post" asp-action="Edit">
+                    <div class="tab-content">
+                        <!--begin::Tab-->
+                        <div class="tab-pane show active px-7" id="kt_user_edit_tab_1" role="tabpanel">
+                            <!--begin::Row-->
+                            <div class="row">
+                                <div class="col-xl-2"></div>
+                                <div class="col-xl-7 my-2">
+                                    <!--begin::Row-->
+                                    <div class="row">
+                                        <label class="col-3"></label>
+                                        <div class="col-9">
+                                            <h6 class="text-dark font-weight-bold mb-10">Chỉnh sửa :</h6>
+                                        </div>
+                                    </div>
+                                    <!--end::Row-->
+                                    <!--begin::Group-->
+                                    <div class="form-group row">
+                                        <label class="col-form-label col-3 text-lg-right text-left">Tên thể loại</label>
+                                        <div class="col-9">
+                                            <input class="form-control form-control-lg form-control-solid" type="text" asp-for="@Model.Name" />
+                                        </div>
+                                    </div>
+                                    <!--end::Group-->
+                                    <!--begin::Group-->
+
+                                    <input hidden asp-for="@Model.TypeID" />
+                                    <!--end::Group-->
+
+                                </div>
+                            </div>
+                            <!--end::Row-->
+                        </div>
+                        <!--end::Tab-->
+                    </div>
+
+                    <!--begin::Toolbar-->
+                    <div class="d-flex float-right mr-5">
+                        <!--begin::Button-->
+                        <a asp-action="Index" class="btn btn-default font-weight-bold btn-sm px-3 font-size-base">Trở lại</a>
+                        <!--end::Button-->
+                        <!--begin::Dropdown-->
+                        <div class="btn-group ml-2">
+                            <button type="submit" class="btn btn-primary font-weight-bold btn-sm px-3 font-size-base">Lưu thay đổi</button>
+                        </div>
+                        <!--end::Dropdown-->
+                    </div>
+                    <!--end::Toolbar-->
+                </form>
+            </div>
+
+            <!--begin::Card body-->
+        </div>
+        <!--end::Card-->
+    </div>
+    <!--end::Container-->
+</div>
+<!--end::Entry-->
+
+@section Scripts{
+    <script type="text/javascript">
+        $('#menu-item-category').addClass('menu-item-active');
+    </script>
+}
