--- a/Views/Types/Index.cshtml
+++ b/Views/Types/Index.cshtml
@@ -2,35 +2,121 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutTheme.cshtml";
 }
 
-    <h3>Quản lí Thể Loại </h3>
+@*<h3>Quản lí Thể Loại </h3>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.TypeID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.TypeID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.TypeID">Delete</a>
-            </td>
-        </tr>
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.TypeID">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.TypeID">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.TypeID">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>*@
+
+
+<!--begin::Entry-->
+<div class="d-flex flex-column-fluid">
+    <!--begin::Container-->
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-6">
+                <!--begin::List Widget 12-->
+                <div class="card card-custom card-stretch gutter-b">
+                    <!--begin::Header-->
+                    <div class="card-header border-0">
+                        <h3 class="card-title font-weight-bolder text-dark">Danh sách thể loại</h3>
+                        <div class="card-toolbar">
+                            <div class="dropdown dropdown-inline">
+                                <div class="btn-group ml-2">
+                                    <a type="submit" asp-action="Create" asp-controller="Types" class="btn btn-primary font-weight-bold btn-sm px-3 font-size-base ml-5 mt-2">Thêm mới</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--end::Header-->
+                    <!--begin::Body-->
+                    <div class="card-body pt-2">
+                        @foreach (var item in Model)
+                        {
+                            <!--begin::Item-->
+                            <div class="d-flex flex-wrap align-items-center mb-10">
+                                <!--begin::Symbol-->
+                                <div class="symbol symbol-60 symbol-2by3 flex-shrink-0">
+                                    <div class="symbol-label" style="background-image: url('assets/media/stock-600x400/img-27.jpg')"></div>
+                                </div>
+                                <!--end::Symbol-->
+                                <!--begin::Title-->
+                                <div class="d-flex flex-column ml-4 flex-grow-1 mr-2">
+                                    <a href="#" class="text-dark-75 font-weight-bold text-hover-primary font-size-lg mb-1">@item.Name</a>
+                                    @*<span class="text-muted font-weight-bold">Size: 87KB</span>*@
+                                </div>
+                                <!--end::Title-->
+                                <!--begin::btn-->
+                                <a asp-controller="Types" asp-action="Edit" asp-route-id="@item.TypeID" class="btn btn-sm btn-default btn-text-primary btn-hover-primary btn-icon mr-2">
+                                    <span class="svg-icon svg-icon-md">
+                                        <!--begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo1\dist/../src/media/svg/icons\Design\Edit.svg--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+                                            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                                <rect x="0" y="0" width="24" height="24" />
+                                                <path d="M8,17.9148182 L8,5.96685884 C8,5.56391781 8.16211443,5.17792052 8.44982609,4.89581508 L10.965708,2.42895648 C11.5426798,1.86322723 12.4640974,1.85620921 13.0496196,2.41308426 L15.5337377,4.77566479 C15.8314604,5.0588212 16,5.45170806 16,5.86258077 L16,17.9148182 C16,18.7432453 15.3284271,19.4148182 14.5,19.4148182 L9.5,19.4148182 C8.67157288,19.4148182 8,18.7432453 8,17.9148182 Z" fill="#000000" fill-rule="nonzero" transform="translate(12.000000, 10.707409) rotate(-135.000000) translate(-12.000000, -10.707409) " />
+                                                <rect fill="#000000" opacity="0.3" x="5" y="20" width="15" height="2" rx="1" />
+                                            </g>
+                                        </svg><!--end::Svg Icon-->
+                                    </span>
+                                </a>
+
+                                <a asp-controller="Types" asp-action="Delete" asp-route-id="@item.TypeID" class="btn btn-sm btn-default btn-text-primary btn-hover-primary btn-icon mr-2">
+                                    <span class="svg-icon svg-icon-md">
+                                        <!--begin::Svg Icon | path:C:\wamp64\www\keenthemes\themes\metronic\theme\html\demo1\dist/../src/media/svg/icons\General\Trash.svg--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+                                            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                                <rect x="0" y="0" width="24" height="24" />
+                                                <path d="M6,8 L6,20.5 C6,21.3284271 6.67157288,22 7.5,22 L16.5,22 C17.3284271,22 18,21.3284271 18,20.5 L18,8 L6,8 Z" fill="#000000" fill-rule="nonzero" />
+                                                <path d="M14,4.5 L14,4 C14,3.44771525 13.5522847,3 13,3 L11,3 C10.4477153,3 10,3.44771525 10,4 L10,4.5 L5.5,4.5 C5.22385763,4.5 5,4.72385763 5,5 L5,5.5 C5,5.77614237 5.22385763,6 5.5,6 L18.5,6 C18.7761424,6 19,5.77614237 19,5.5 L19,5 C19,4.72385763 18.7761424,4.5 18.5,4.5 L14,4.5 Z" fill="#000000" opacity="0.3" />
+                                            </g>
+                                        </svg><!--end::Svg Icon-->
+                                    </span>
+                                </a>
+
+                                <!--end::Btn-->
+                            </div>
+                            <!--end::Item-->
+                        }
+                    </div>
+                    <!--end::Body-->
+                </div>
+                <!--end::List Widget 12-->
+            </div>
+        </div>
+    </div>
+    <!--end::Container-->
+</div>
+<!--end::Entry-->
+
+
+@section Scripts{
+    <script type="text/javascript">
+        $('#menu-item-category').addClass('menu-item-active');
+    </script>
 }
-    </tbody>
-</table>
