--- a/Views/SanPham/Create.cshtml
+++ b/Views/SanPham/Create.cshtml
@@ -30,11 +30,11 @@
                                                     <label class="col-xl-3 col-lg-3 col-form-label text-left">Hình ảnh</label>
                                                     <div class="col-lg-9 col-xl-9">
                                                         <div class="image-input image-input-outline" id="kt_user_add_avatar">
-                                                            <div class="image-input-wrapper" style="background-image: url(image/book-placeholder-small.png)"></div>
+                                                            <div class="image-input-wrapper" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRK3nKjzHS9kqCAsWrF8UrA6Jjcn9tjP6XGjw&usqp=CAU')"></div>
                                                             <label class="btn btn-xs btn-icon btn-circle btn-white btn-hover-text-primary btn-shadow" data-action="change" data-toggle="tooltip" title="" data-original-title="Change avatar">
                                                                 <i class="fa fa-pen icon-sm text-muted"></i>
                                                                 <input type="file" name="profile_avatar" accept=".png, .jpg, .jpeg" />
-                                                                <input type="text" hidden asp-for="ProductImage" value="book-placeholder-small.png" />
+                                                                <input type="text" hidden asp-for="ProductImage" value="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRK3nKjzHS9kqCAsWrF8UrA6Jjcn9tjP6XGjw&usqp=CAU" />
                                                                 <input type="hidden" name="profile_avatar_remove" />
                                                             </label>
                                                             <span class="btn btn-xs btn-icon btn-circle btn-white btn-hover-text-primary btn-shadow" data-action="cancel" data-toggle="tooltip" title="Cancel avatar">
