--- a/Views/SanPham/Index.cshtml
+++ b/Views/SanPham/Index.cshtml
@@ -67,7 +67,7 @@
                                 <!--begin::Pic-->
                                 <div class="flex-shrink-0 mr-4 mt-lg-0 mt-3">
                                     <div class="symbol symbol-lg-150">
-                                        <img src="/image/@item.ProductImage" alt="image" />
+                                        <img src="@item.ProductImage" alt="image" />
                                     </div>
                                     @*<div class="symbol symbol-lg-75 symbol-circle symbol-primary d-none">
                                             <span class="font-size-h3 font-weight-boldest">JM</span>
