--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -108,7 +108,7 @@
                 <li><a href="#">Tin tức</a></li>
                 <li><a href="#">Hỏi đáp</a></li>
                 <li><a href="#">Liên hệ</a></li>
-                <li><a asp-controller="GiaoDienQL" asp-action="Index">Quản Lí</a></li>
+                <li><a asp-controller="ManageUser" asp-action="Index">Quản Lí</a></li>
             </ul>
         </div>
     </div>
