--- a/Views/Orders/Temp.cshtml
+++ b/Views/Orders/Temp.cshtml
@@ -21,54 +21,6 @@
 
                 </div>
                 <div class="card-body">
-                    <!--begin: Search Form-->
-                    <!--begin::Search Form-->
-                    <div class="mb-7">
-                        <div class="row align-items-center">
-                            <div class="col-lg-9 col-xl-8">
-                                <div class="row align-items-center">
-                                    <div class="col-md-4 my-2 my-md-0">
-                                        <div class="input-icon">
-                                            <input type="text" class="form-control" placeholder="Search..." id="kt_datatable_search_query" />
-                                            <span>
-                                                <i class="flaticon2-search-1 text-muted"></i>
-                                            </span>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 my-2 my-md-0">
-                                        <div class="d-flex align-items-center">
-                                            <label class="mr-3 mb-0 d-none d-md-block">Status:</label>
-                                            <select class="form-control" id="kt_datatable_search_status">
-                                                <option value="">All</option>
-                                                <option value="1">Pending</option>
-                                                <option value="2">Delivered</option>
-                                                <option value="3">Canceled</option>
-                                                <option value="4">Success</option>
-                                                <option value="5">Info</option>
-                                                <option value="6">Danger</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 my-2 my-md-0">
-                                        <div class="d-flex align-items-center">
-                                            <label class="mr-3 mb-0 d-none d-md-block">Type:</label>
-                                            <select class="form-control" id="kt_datatable_search_type">
-                                                <option value="">All</option>
-                                                <option value="1">Online</option>
-                                                <option value="2">Retail</option>
-                                                <option value="3">Direct</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-xl-4 mt-5 mt-lg-0">
-                                <a href="#" class="btn btn-light-primary px-6 font-weight-bold">Search</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!--end::Search Form-->
-                    <!--end: Search Form-->
                     <!--begin: Datatable-->
                     <div class="datatable datatable-bordered datatable-head-custom" id="kt_datatable"></div>
                     <!--end: Datatable-->
@@ -82,8 +34,11 @@
 </div>
 
 
-@section Scripts{ 
+@section Scripts{
     <script type="text/javascript">
+        $('#menu-item-order').addClass('menu-item-active');
+
+
         var dataJson = @Html.Raw(JsonConvert.SerializeObject(Model, new Newtonsoft.Json.Converters.IsoDateTimeConverter() { DateTimeFormat = "dd-MM-yyy HH:mm:ss" }));
         console.log(dataJson);
 
@@ -107,10 +62,10 @@
 
             pagination: true,
 
-            search: {
-                input: $('#kt_datatable_search_query'),
-                key: 'generalSearch'
-            },
+            //search: {
+            //    input: $('#kt_datatable_search_query'),
+            //    key: 'generalSearch'
+            //},
 
             // columns definition
             columns: [{
@@ -143,78 +98,75 @@
                 field: 'Phone',
                 title: 'Phone',
             },
-            {
-                field: 'TotalPrice',
-                title: 'Total Price',
-                template: function (row) {
-                    var formatter = new Intl.NumberFormat('vn-VN', {
-                        style: 'currency',
-                        currency: 'VND',
-                    });
+                {
+                    field: 'TotalPrice',
+                    title: 'Total Price',
+                    template: function (row) {
+                        var formatter = new Intl.NumberFormat('vn-VN', {
+                            style: 'currency',
+                            currency: 'VND',
+                        });
 
-                    return formatter.format(row.TotalPrice);
+                        return formatter.format(row.TotalPrice);
+                    },
                 },
-            },
+                {
+                    field: 'IsCheckout',
+                    title: 'Thanh toán',
+                    // callback function support for column rendering
+                    template: function (row) {
+                        var status = {
+                            false: {
+                                'title': 'Chưa thanh toán',
+                                'class': ' label-light-danger'
+                            },
+                            true: {
+                                'title': 'Đã thanh toán',
+                                'class': ' label-light-warning'
+                            },
+                            "Paypal": {
+                                'title': 'Paypal',
+                                'class': 'success'
+                            },
+                            "Ship COD": {
+                                'title': 'Ship COD',
+                                'class': 'primary'
+                            },
+                        };
+                        return '<span class="label label-' + status[row.PaymentMethod].class + ' label-dot mr-2"></span><span class="font-weight-bold text-' + status[row.PaymentMethod].class + '">' +
+                            status[row.PaymentMethod].title + '</span>' + '<span class="label font-weight-bold label-lg ' + status[row.IsCheckout].class + ' label-inline">' + status[row.IsCheckout].title + '</span>';
+                    },
+                },
             {
-                field: 'Status',
+                field: 'Vận chuyển',
                 title: 'Status',
                 // callback function support for column rendering
                 template: function (row) {
                     var status = {
-                        'đang giao dịch': {
-                            'title': 'đang giao dịch',
+                        'đã giao hàng': {
+                            'title': 'đã giao hàng',
                             'class': ' label-light-success'
                         },
-                        2: {
-                            'title': 'Delivered',
-                            'class': ' label-light-danger'
-                        },
-                        3: {
-                            'title': 'Canceled',
+                        'đang giao hàng': {
+                            'title': 'đang giao hàng',
                             'class': ' label-light-primary'
                         },
-                        4: {
-                            'title': 'Success',
-                            'class': ' label-light-success'
-                        },
-                        5: {
-                            'title': 'Info',
-                            'class': ' label-light-info'
-                        },
-                        6: {
-                            'title': 'Danger',
+                        'khách hủy đơn': {
+                            'title': 'khách hủy đơn',
                             'class': ' label-light-danger'
                         },
-                        7: {
-                            'title': 'Warning',
-                            'class': ' label-light-warning'
+                        'chưa duyệt': {
+                            'title': 'chưa duyệt',
+                            'class': ' label-light-dark'
                         },
+                        'chờ lấy hàng': {
+                            'title': 'chờ lấy hàng',
+                            'class': ' label-light-info'
+                        }
                     };
                     return '<span class="label font-weight-bold label-lg ' + status[row.Status].class + ' label-inline">' + status[row.Status].title + '</span>';
                 },
-                //}, {
-                //    field: 'Type',
-                //    title: 'Type',
-                //    autoHide: false,
-                //    // callback function support for column rendering
-                //    template: function (row) {
-                //        var status = {
-                //            1: {
-                //                'title': 'Online',
-                //                'state': 'danger'
-                //            },
-                //            2: {
-                //                'title': 'Retail',
-                //                'state': 'primary'
-                //            },
-                //            3: {
-                //                'title': 'Direct',
-                //                'state': 'success'
-                //            },
-                //        };
-                //        return '<span class="label label-' + status[row.Type].state + ' label-dot mr-2"></span><span class="font-weight-bold text-' + status[row.Type].state + '">' +
-                //            status[row.Type].title + '</span>';
-                //    },
+                //},
             }, {
                 field: 'Actions',
                 title: 'Actions',
@@ -241,33 +193,27 @@
                                                 Choose an action:\
                                             </li>\
                                             <li class="navi-item">\
-                                                <a href="#" class="navi-link">\
-                                                    <span class="navi-icon"><i class="la la-print"></i></span>\
-                                                    <span class="navi-text">Print</span>\
+                                                <a href="/Orders/Approve/' + row.OrderId + '" class="navi-link">\
+                                                    <span class="navi-icon"><i class="fab fa-buffer"></i></span>\
+                                                    <span class="navi-text">Chờ lấy hàng</span>\
                                                 </a>\
                                             </li>\
                                             <li class="navi-item">\
-                                                <a href="#" class="navi-link">\
-                                                    <span class="navi-icon"><i class="la la-copy"></i></span>\
-                                                    <span class="navi-text">Copy</span>\
+                                                <a href="/Orders/Delivering/' + row.OrderId + '" class="navi-link">\
+                                                    <span class="navi-icon"><i class="fas fa-shipping-fast"></i></span>\
+                                                    <span class="navi-text">Đang giao hàng</span>\
                                                 </a>\
                                             </li>\
                                             <li class="navi-item">\
-                                                <a href="#" class="navi-link">\
-                                                    <span class="navi-icon"><i class="la la-file-excel-o"></i></span>\
-                                                    <span class="navi-text">Excel</span>\
+                                                <a href="/Orders/Delivered/' + row.OrderId + '" class="navi-link">\
+                                                    <span class="navi-icon"><i class="far fa-thumbs-up"></i></span>\
+                                                    <span class="navi-text">Đã giao hàng</span>\
                                                 </a>\
                                             </li>\
                                             <li class="navi-item">\
-                                                <a href="#" class="navi-link">\
-                                                    <span class="navi-icon"><i class="la la-file-text-o"></i></span>\
-                                                    <span class="navi-text">CSV</span>\
-                                                </a>\
-                                            </li>\
-                                            <li class="navi-item">\
-                                                <a href="#" class="navi-link">\
-                                                    <span class="navi-icon"><i class="la la-file-pdf-o"></i></span>\
-                                                    <span class="navi-text">PDF</span>\
+                                                <a href="/Orders/Cancel/' + row.OrderId + '" class="navi-link">\
+                                                    <span class="navi-icon"><i class="far fa-thumbs-down"></i></span>\
+                                                    <span class="navi-text">Khách hủy đơn</span>\
                                                 </a>\
                                             </li>\
                                         </ul>\
@@ -300,24 +246,24 @@
             }],
         });
 
-        $('#kt_datatable_search_status').on('change', function () {
-            datatable.search($(this).val().toLowerCase(), 'Status');
-        });
+        //$('#kt_datatable_search_status').on('change', function () {
+        //    datatable.search($(this).val().toLowerCase(), 'Status');
+        //});
 
-        $('#kt_datatable_search_type').on('change', function () {
-            datatable.search($(this).val().toLowerCase(), 'Type');
-        });
+        //$('#kt_datatable_search_type').on('change', function () {
+        //    datatable.search($(this).val().toLowerCase(), 'Type');
+        //});
 
-        $('#kt_datatable_search_status, #kt_datatable_search_type').selectpicker();
+        //$('#kt_datatable_search_status, #kt_datatable_search_type').selectpicker();
     </script>
 }
 
 @*@section Scripts{
-    <script type="text/javascript">
-        console.log("Ok");
+        <script type="text/javascript">
+            console.log("Ok");
 
-        var dataJson = @JsonConvert.SerializeObject(Model);
-            console.log(dataJson);
-        
-    </script>
-}*@
+            var dataJson = @JsonConvert.SerializeObject(Model);
+                console.log(dataJson);
+
+        </script>
+    }*@
