--- a/Views/SanPham/Edit.cshtml
+++ b/Views/SanPham/Edit.cshtml
@@ -101,7 +101,7 @@
                                                     <label class="col-xl-3 col-lg-3 col-form-label text-left">Hình ảnh</label>
                                                     <div class="col-lg-9 col-xl-9">
                                                         <div class="image-input image-input-outline" id="kt_user_add_avatar">
-                                                            <div class="image-input-wrapper" style="background-image: url(image/@Model.ProductImage)"></div>
+                                                            <div class="image-input-wrapper" style="background-image: url(@Model.ProductImage)"></div>
                                                             <label class="btn btn-xs btn-icon btn-circle btn-white btn-hover-text-primary btn-shadow" data-action="change" data-toggle="tooltip" title="" data-original-title="Change avatar">
                                                                 <i class="fa fa-pen icon-sm text-muted"></i>
                                                                 <input type="file" name="profile_avatar" accept=".png, .jpg, .jpeg" />
