--- a/Views/Cart/PaymentFail.cshtml
+++ b/Views/Cart/PaymentFail.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<div class="text-center">
+﻿<div class="text-center">
     <img src="~/image/payment-fail.png" />
     <h3 class="mt-5 mb-5">Thanh toán thất bại, vui lòng thử lại.</h3>
 </div>
