--- a/Views/Shared/_LayoutTheme.cshtml
+++ b/Views/Shared/_LayoutTheme.cshtml
@@ -36,8 +36,8 @@
     <!--begin::Header Mobile-->
     <div id="kt_header_mobile" class="header-mobile align-items-center header-mobile-fixed">
         <!--begin::Logo-->
-        <a href="index.html">
-            <img alt="Logo" src="~/theme/assets/media/logos/logo-light.png" />
+        <a asp-action="Index" asp-controller="Home">
+            <img alt="Logo" src="~/img/logors.png" />
         </a>
         <!--end::Logo-->
         <!--begin::Toolbar-->
@@ -79,8 +79,8 @@
                 <!--begin::Brand-->
                 <div class="brand flex-column-auto" id="kt_brand">
                     <!--begin::Logo-->
-                    <a href="index.html" class="brand-logo">
-                        <img alt="Logo" src="~/theme/assets/media/logos/logo-light.png" />
+                    <a asp-action="Index" asp-controller="Home" class="brand-logo">
+                        <img alt="Logo" src="~/img/logors.png" />
                     </a>
                     <!--end::Logo-->
                     <!--begin::Toggle-->
