--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -107,7 +107,7 @@
                 <li><a href="#">Diễn đàn</a></li>
                 <li><a href="#">Tin tức</a></li>
                 <li><a href="#">Hỏi đáp</a></li>
-                <li><a href="#">Liên hệ</a></li>
+                <li><a asp-controller="Orders" asp-action="Index">Đơn hàng</a></li>
                 <li><a asp-controller="ManageUser" asp-action="Index">Quản Lí</a></li>
             </ul>
         </div>
